# neo4j-memory-server

./: .gitignore  README.md  SECURITY.md  pyproject.toml
docker/: docker-compose.yml
examples/: .env.example
examples/mcp_client_config/: claude_desktop_config.yaml
src/neo4j_memory_server/: config.py  manager.py  models.py  server.py
tests/: test_integration.py
